A small tech blog for others to follow my projects
Grease-Factory Blog

--- a/index.html
+++ b/index.html
@@ -1,7 +1,13 @@
-<!DOCTYPE html>
-<html>
-<body>
-<h1>Hello World</h1>
-<p>I'm hosted with GitHub Pages.</p>
-</body>
-</html>
+<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01//EN" "http://www.w3.org/TR/html4/strict.dtd">
+<html><head>
+<meta content="text/html; charset=ISO-8859-1" http-equiv="content-type"><title>Home</title><style type="text/css"></style></head><body style="background-image: url(../Desktop/y-so-serious.png);">
+<div style="text-align: center;"><span style="font-weight: bold;"><img style="width: 812px; height: 226px;" alt="Grease-Factory" src="logo.png" align="middle"></span><br>
+<span style="font-weight: bold;"></span></div>
+
+<div style="text-align: center; color: rgb(51, 255, 255);">
+<h2>A tech blog dedicated to making and breaking everything under the sun.</h2>
+
+
+
+</div>
+</body></html>
