--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01//EN" "http://www.w3.org/TR/html4/strict.dtd">
 <html><head>
-<meta content="text/html; charset=ISO-8859-1" http-equiv="content-type"><title>Home</title><style type="text/css"></style></head><body style="background-image: url(../Desktop/y-so-serious.png);">
+<meta content="text/html; charset=ISO-8859-1" http-equiv="content-type"><title>Home</title><style type="text/css"></style></head><body style="background-image: url(https://raw.githubusercontent.com/IdleHax/IdleHax.github.io/master/y-so-serious.png);">
 <div style="text-align: center;"><span style="font-weight: bold;"><img style="width: 812px; height: 226px;" alt="Grease-Factory" src="logo.png" align="middle"></span><br>
 <span style="font-weight: bold;"></span></div>
 
