--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
    <!--- Basic Page Needs
    ================================================== -->
    <meta charset="utf-8">
-	<title>Sparrow - Free Responsive HTML5/CSS3 Template</title>
+	<title>IdleHax - the internet's technological car crash</title>
 	<meta name="description" content="">
 	<meta name="author" content="">
 
@@ -27,7 +27,7 @@
 
    <!-- Favicons
 	================================================== -->
-	<link rel="shortcut icon" href="favicon.ico" > 
+	<link rel="shortcut icon" href="favicon.ico" >
 
 </head>
 
@@ -59,15 +59,9 @@
                         <li><a href="single.html">Post</a></li>
                      </ul>
                   </li>
-                  <li><span><a href="portfolio-index.html">Portfolio</a></span>
-                     <ul>
-                        <li><a href="portfolio-index.html">Portfolio Index</a></li>
-                        <li><a href="portfolio.html">Portfolio Entry</a></li>
-                     </ul>
-                  </li>
+
 	               <li><a href="about.html">About</a></li>
                   <li><a href="contact.html">Contact</a></li>
-                  <li><a href="styles.html">Features</a></li>
 
                </ul> <!-- end #nav -->
 
@@ -93,10 +87,10 @@
 				   <div class="row">
 					   <div class="twelve columns">
 						   <div class="slider-text">
-							   <h1>Free amazing site template<span>.</span></h1>
-							   <p>Aenean condimentum, lacus sit amet luctus lobortis, dolores et quas molestias excepturi
-                        enim tellus ultrices elit, amet consequat enim elit noneas sit amet luctu. lacus sit amet luctus lobortis, dolores et quas molestias excepturi
-                        enim tellus ultrices elit.</p>
+							   <h1>Making and Breaking everything under the sun<span>.</span></h1>
+							   <p>Hello World. as you might've guessed, my name is Idle. I started this site
+                   to document my projects in a way others will be able to recreate, modify,
+                   or simply learn something new by reading about. Hope you enjoy your stay.</p>
 						   </div>
                      <div class="slider-image">
                         <img src="images/sliders/home-slider-image-01.png" alt="" />
@@ -137,34 +131,43 @@
          <div class="bgrid-quarters s-bgrid-halves">
 
            <div class="columns">
-              <h2>Clean & Modern.</h2>
+              <h2>Programming.</h2>
 
-              <p>Duis mollis, est non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit.
-              Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.
+              <p>Hours of googling and a drive bordering on self-destructive to make a computer
+                do things no one else intended, or wanted it to can produce something pretty special.
+                I put together idie games from time to time and might post up how I solved the problems i
+                ran into for others to learn from or laugh at.
               </p>
            </div>
 
            <div class="columns">
-              <h2>Responsive.</h2>
+              <h2>Hacking.</h2>
 
-              <p>Duis mollis, est non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit.
-              Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.
+              <p>I specialize in breaking things. My own things. Cracking hashes, breaking webpages, mangling software,
+                 voiding hardware, "ricing" operating systems and playing CTF's. I'll be doing write ups on all the legal
+                  ways you can too. Setting up a local server to host vulnerable webpages is a blast and a great way to
+                   crack your hacking knuckles without winding up in a black van.
               </p>
            </div>
 
            <div class="columns s-first">
-              <h2>HTML5 + CSS3.</h2>
+              <h2>Making.</h2>
 
-              <p>Duis mollis, est non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit.
-              Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.
+              <p>I think myself a jack-of-all-trades-master-of-none in this catagory. I frequently design things
+                in OpenSCAD to make my life easier. I've heavily modified my 3D printer and get some great prints
+                on the cheap. Soldering is a fun and useful skill I'll also be covering. and who doesn't love turning
+                early 2000's mp3 players into half-dollar sized gameboys?
               </p>
            </div>
 
            <div class="columns">
-              <h2>Free of Charge.</h2>
+              <h2>Reversing.</h2>
 
-              <p>Duis mollis, est non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit.
-              Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.
+              <p>Ahh yes. Assembly language, binary, and all of the lovely things your uncle had to slog through
+                to make a "fortune telling" homebrew game that just insulted his mates regardless of what number they
+                put in during the 80's. On a serious note, reverse engineering malware has been a critical tool
+                for security experts the world around, and makes a good way to kill a weekend or render a virtual machine
+                completely fragged in the process.
               </p>
            </div>
 
@@ -174,79 +177,6 @@
 
    </section> <!-- Info Section End-->
 
-   <!-- Works Section
-   ================================================== -->
-   <section id="works">
-
-      <div class="row">
-
-         <div class="twelve columns align-center">
-            <h1>Some of our recent works.</h1>
-         </div>
-
-         <div id="portfolio-wrapper" class="bgrid-quarters s-bgrid-halves">
-
-    		   <div class="columns portfolio-item">
-               <div class="item-wrap">
-    				   <a href="portfolio.html">
-                     <img alt="" src="images/portfolio/geometrics.jpg">
-                     <div class="overlay"></div>
-                     <div class="link-icon"><i class="fa fa-link"></i></div>
-                  </a>
-    					<div class="portfolio-item-meta">
-    					   <h5><a href="portfolio.html">Geometrics</a></h5>
-                     <p>Illustration</p>
-    					</div>
-               </div>
-    			</div>
-
-            <div class="columns portfolio-item">
-               <div class="item-wrap">
-    				   <a href="portfolio.html">
-                     <img alt="" src="images/portfolio/console.jpg">
-                     <div class="overlay"></div>
-                     <div class="link-icon"><i class="fa fa-link"></i></div>
-                  </a>
-    					<div class="portfolio-item-meta">
-    					   <h5><a href="portfolio.html">Console</a></h5>
-                     <p>Web Development</p>
-    					</div>
-               </div>
-    			</div>
-
-            <div class="columns portfolio-item s-first">
-               <div class="item-wrap">
-    				   <a href="portfolio.html">
-                     <img alt="" src="images/portfolio/camera-man.jpg">
-                     <div class="overlay"></div>
-                     <div class="link-icon"><i class="fa fa-link"></i></div>
-                  </a>
-    					<div class="portfolio-item-meta">
-    					   <h5><a href="portfolio.html">Camera Man</a></h5>
-                     <p>Photography</p>
-    					</div>
-               </div>
-    			</div>
-
-            <div class="columns portfolio-item">
-               <div class="item-wrap">
-    				   <a href="portfolio.html">
-                     <img alt="" src="images/portfolio/into-the-light.jpg">
-                     <div class="overlay"></div>
-                     <div class="link-icon"><i class="fa fa-link"></i></div>
-                  </a>
-    					<div class="portfolio-item-meta">
-    					   <h5><a href="portfolio.html">Into The Light</a></h5>
-                     <p>Branding</p>
-    					</div>
-               </div>
-    			</div>
-
-         </div>
-
-      </div>
-
-   </section> <!-- Works Section End-->
 
    <!-- Journal Section
    ================================================== -->
@@ -357,68 +287,6 @@
 
    </section> <!-- Journal Section End-->
 
-   <!-- Call-To-Action Section
-   ================================================== -->
-   <section id="call-to-action">
-
-      <div class="row">
-
-         <div class="eight columns offset-1">
-
-            <h1><a href="http://www.dreamhost.com/r.cgi?287326|STYLESHOUT">Host This Template on Dreamhost.</a></h1>
-            <p>Looking for an awesome and reliable webhosting? Try <a href="http://www.dreamhost.com/r.cgi?287326|STYLESHOUT"><span>DreamHost</span></a>.
-					Get <span>$50 off</span> when you sign up with the promocode <span>STYLESHOUT</span>. 
-					<!-- Simply type	the promocode in the box labeled “Promo Code” when placing your order. --></p>
-
-         </div>
-
-         <div class="three columns action">
-
-            <a href="http://www.dreamhost.com/r.cgi?287326|STYLESHOUT" class="button">Sign Up Now</a>
-
-         </div>
-
-      </div>
-
-   </section> <!-- Call-To-Action Section End-->
-
-   <!-- Tweets Section
-   ================================================== -->
-   <section id="tweets">
-
-      <div class="row">
-
-         <div class="tweeter-icon align-center">
-            <i class="fa fa-twitter"></i>
-         </div>
-
-         <ul id="twitter" class="align-center">
-            <li>
-               <span>
-               This is Photoshop's version  of Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet.
-               Aenean sollicitudin, lorem quis bibendum auctor, nisi elit consequat ipsum
-               <a href="#">http://t.co/CGIrdxIlI3</a>
-               </span>
-               <b><a href="#">2 Days Ago</a></b>
-            </li>
-            <!--
-            <li>
-               <span>
-               This is Photoshop's version  of Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet.
-               Aenean sollicitudin, lorem quis bibendum auctor, nisi elit consequat ipsum
-               <a href="#">http://t.co/CGIrdxIlI3</a>
-               </span>
-               <b><a href="#">3 Days Ago</a></b>
-            </li>
-            -->
-         </ul>
-
-         <p class="align-center"><a href="#" class="button">Follow us</a></p>
-
-      </div>
-
-   </section> <!-- Tweet Section End-->
-
 
 
    <!-- footer
@@ -432,12 +300,10 @@
             <ul class="footer-nav">
 					<li><a href="#">Home.</a></li>
               	<li><a href="#">Blog.</a></li>
-              	<li><a href="#">Portfolio.</a></li>
               	<li><a href="#">About.</a></li>
               	<li><a href="#">Contact.</a></li>
-               <li><a href="#">Features.</a></li>
 			   </ul>
-
+          <!-- social media tie-ins to activate later maybe
             <ul class="footer-social">
                <li><a href="#"><i class="fa fa-facebook"></i></a></li>
                <li><a href="#"><i class="fa fa-twitter"></i></a></li>
@@ -446,10 +312,10 @@
                <li><a href="#"><i class="fa fa-skype"></i></a></li>
                <li><a href="#"><i class="fa fa-rss"></i></a></li>
             </ul>
-
+          -->
             <ul class="copyright">
-               <li>Copyright &copy; 2014 Sparrow</li> 
-               <li>Design by <a href="http://www.styleshout.com/">Styleshout</a></li>               
+               <li>Copyright &copy; 2020 IdleHax</li>
+               <li>Design by <a href="http://www.styleshout.com/">Styleshout</a></li>
             </ul>
 
          </div>
