--- a/blog.html
+++ b/blog.html
@@ -59,15 +59,9 @@
                         <li><a href="single.html">Post</a></li>
                      </ul>
                   </li>
-                  <li><span><a href="portfolio-index.html">Portfolio</a></span>
-                     <ul>
-                        <li><a href="portfolio-index.html">Portfolio Index</a></li>
-                        <li><a href="portfolio.html">Portfolio Entry</a></li>
-                     </ul>
-                  </li>
+
 	               <li><a href="about.html">About</a></li>
                   <li><a href="contact.html">Contact</a></li>
-                  <li><a href="styles.html">Features</a></li>
 
                </ul> <!-- end #nav -->
 
@@ -341,14 +335,12 @@
          <div class="twelve columns">
 
             <ul class="footer-nav">
-					<li><a href="#">Home.</a></li>
-              	<li><a href="#">Blog.</a></li>
-              	<li><a href="#">Portfolio.</a></li>
-              	<li><a href="#">About.</a></li>
-              	<li><a href="#">Contact.</a></li>
-               <li><a href="#">Features.</a></li>
-			   </ul>
-
+          <li><a href="#">Home.</a></li>
+                <li><a href="#">Blog.</a></li>
+                <li><a href="#">About.</a></li>
+                <li><a href="#">Contact.</a></li>
+         </ul>
+          <!-- social media tie-ins to activate later maybe
             <ul class="footer-social">
                <li><a href="#"><i class="fa fa-facebook"></i></a></li>
                <li><a href="#"><i class="fa fa-twitter"></i></a></li>
@@ -357,10 +349,10 @@
                <li><a href="#"><i class="fa fa-skype"></i></a></li>
                <li><a href="#"><i class="fa fa-rss"></i></a></li>
             </ul>
-
+          -->
             <ul class="copyright">
-               <li>Copyright &copy; 2014 Sparrow</li> 
-               <li>Design by <a href="http://www.styleshout.com/">Styleshout</a></li>               
+               <li>Copyright &copy; 2020 IdleHax</li>
+               <li>Design by <a href="http://www.styleshout.com/">Styleshout</a></li>
             </ul>
 
          </div>
@@ -380,6 +372,7 @@
    <script src="js/jquery.flexslider.js"></script>
    <script src="js/doubletaptogo.js"></script>
    <script src="js/init.js"></script>
+
 
 </body>
 
